# SeedVC-ComfyUI

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  slicer2.py
doc/: ComfyUI_temp_avuao_00001_.flac  ComfyUI_temp_avuao_00002_.flac  sing_workflow.json  speech_workflow.json  变声器_workflow.json
seedvc/dac/: __main__.py
seedvc/dac/model/: dac.py
seedvc/dac/nn/: quantize.py
seedvc/modules/: commons.py  diffusion_transformer.py  flow_matching.py  length_regulator.py  quantize.py  wavenet.py
seedvc/modules/campplus/: DTDNN.py
